# MoDeGPT

./: .gitignore  README.md  calibration.py  compress_cr.py  compress_mlp.py  compress_nystrom.py  compress_qk.py  compress_svd.py  compress_vo.py  compression_type2.py  compression_type2_cc.py  compression_type3.py  compression_type3_cc.py  compression_utils.py  eval.py  evaluation.py  init-modegpt.sh  model_utils.py  playground.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  run_modegpt.py  test-llama.sh  tests.sh
patchers/: LlamaRebuild.py  OPTRebuild.py  opt_patch.py  patch.py
scripts/: llama-1b.sh  run_llama2-7b.sh  run_opt-125m.sh  run_opt-6.7b.sh
src/: calibration.py  compression_utils.py  eval.py  model_utils.py  run_modegpt.py
src/adapters/: CompressionConfig.py  LlamaAdapter.py  OPTAdapter.py  QwenAdapter.py  model_adapter.py
src/analysis/: optuna.py
src/compression/: compress_mlp.py  compress_qk.py  compress_vo.py
src/patchers/: DenseQwenRebuild.py  patch.py
