[project]
name = "modegpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "transformers[torch]>=4.57.1",
]

[tool.ruff]
line-length = 100
