[project]
name = "modegpt"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "numpy>=2.3.4",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "transformers[torch]>=4.57.1",
]

[tool.ruff]
line-length = 100
