[project]
name = "modegpt"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    # "datasets<3.00",
    # "datasets==2.19.0",
    # "flash-attn>=2.8.3",
    "huggingface-hub>=0.36.0",
    "lm-eval[hf]>=0.4.9.2",
    # "lm-eval[hf]==0.4.2",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "optuna>=4.8.0",
    "plotly>=6.6.0",
    "psutil>=7.2.1",
    "safetensors>=0.6.2",
    "seaborn>=0.13.2",
    "torch",
    # "transformers[torch]==4.38.2",
    # "transformers[torch]==4.40.2",
    "transformers[torch]>=4.53.0,<5.0.0", ### For Mixtral-8x7B
    # "transformers[torch]>=4.45.0,<4.48.0", ### USE THIS ONE FOR DEEPSEEK BENCHMARKING
]


###
### Qwen3-8b REquires transformers>4.51.0 according HF repo

# [tool.uv.extra-build-dependencies]
# flash-attn = ["torch", "packaging", "ninja"]


#### WORKS FOR DEEPSEEK: 
# dependencies = [
#     "accelerate>=1.11.0",
#     "datasets>=4.4.1",
#     # "datasets<3.00",
#     # "datasets==2.19.0",
#     "flash-attn>=2.8.3",
#     "huggingface-hub>=0.36.0",
#     "lm-eval[hf]>=0.4.9.2",
#     # "lm-eval[hf]==0.4.2",
#     "numpy>=2.3.4",
#     "psutil>=7.2.1",
#     "safetensors>=0.6.2",
#     "torch>=2.9.0",
#     # "transformers[torch]==4.38.2",
#     # "transformers[torch]==4.40.2",
#     "transformers[torch]>=4.45.0",
# ]
### Testing mathqa on Deepseek must have datasets<3.0.0
### MUST TEST MATHQA SEPARATELY from rest (i think)
